@@ -1,5 +1,7 @@
 [Changes 1.2c01]
 
+* Improve connect() error handling. (caf)
+
 * Remove obsolete .spec files. (caf)
 
 * configure - only create sig.inc if it's actually needed. (caf)
